yaml/base/frontend/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"ollama"}]'
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/kwkoo/ollama-rag
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
        resources:
          limits:
            nvidia.com/gpu: 1
        volumeMounts:
        - name: db
          mountPath: /data/db
        - name: source
          mountPath: /data/source_documents
      - name: filebrowser
        image: docker.io/filebrowser/filebrowser:v2
        ports:
        - containerPort: 8081
          name: filebrowser
        args:
        - --port=8081
        - --noauth
        - --database=/srv/filebrowser.db
        - --disable-exec
        volumeMounts:
        - mountPath: /srv
          name: source
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
  volumeClaimTemplates:
  - metadata:
      name: db
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
  - metadata:
      name: source
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
status: {}
