yaml/base/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: 8080
  to:
    name: frontend
    weight: null
status: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend
  name: filebrowser
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: 8081
  to:
    name: frontend
    weight: null
status: {}
